# str

./: CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
configured_files/: config.hpp.in
include/str/: join.hpp  lower.hpp  split.hpp  strip.hpp  title.hpp  upper.hpp
src/: CMakeLists.txt  lower.cpp  strip.cpp  title.cpp  upper.cpp
test/: CMakeLists.txt  join_tests.cpp  lower_tests.cpp  split_tests.cpp  strip_tests.cpp  title_tests.cpp  upper_tests.cpp
